--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             </div>
             
             <div class="bento-grid">
-                <div class="bento-item large hidden" style="background-image: url('assets/photo1.jpg');">
+                <div class="bento-item large hidden" style="background-image: url('photo1.jpg');">
                     <div class="bento-overlay"><h3>Date Nights</h3></div>
                 </div>
-                <div class="bento-item hidden" style="background-image: url('assets/photo2.jpg');"></div>
-                <div class="bento-item hidden" style="background-image: url('assets/photo3.jpg');"></div>
-                <div class="bento-item tall hidden" style="background-image: url('assets/photo4.jpg');">
+                <div class="bento-item hidden" style="background-image: url('photo2.jpg');"></div>
+                <div class="bento-item hidden" style="background-image: url('photo3.jpg');"></div>
+                <div class="bento-item tall hidden" style="background-image: url('photo4.jpg');">
                     <div class="bento-overlay"><h3>Adventures</h3></div>
                 </div>
-                <div class="bento-item hidden" style="background-image: url('assets/photo5.jpg');"></div>
-                <div class="bento-item hidden" style="background-image: url('assets/photo6.jpg');"></div>
+                <div class="bento-item hidden" style="background-image: url('photo5.jpg');"></div>
+                <div class="bento-item hidden" style="background-image: url('photo6.jpg');"></div>
             </div>
         </div>
     </section>
@@ -64,19 +64,19 @@
             <div class="slideshow-container hidden">
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
-                    <img src="assets/photo7.jpg" style="width:100%">
+                    <img src="photo7.jpg" style="width:100%">
                     <div class="text">Waffel Lovers 🍷</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
-                    <img src="assets/photo8.jpg" style="width:100%">
+                    <img src="photo8.jpg" style="width:100%">
                     <div class="text">Crazy Trips ✈️</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
-                    <img src="assets/photo9.jpg" style="width:100%">
+                    <img src="photo9.jpg" style="width:100%">
                     <div class="text">Us Forever ❤️</div>
                 </div>
 
@@ -102,7 +102,7 @@
             <div class="player-wrapper hidden">
                 <div class="music-card">
                     <div class="album-art">
-                        <img src="assets/photo11.jpg" id="album-art-img" alt="Album Art">
+                        <img src="photo11.jpg" id="album-art-img" alt="Album Art">
                     </div>
                     <div class="track-info">
                         <h3>O My Love</h3>
